--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 .env
 __pycache__/telegram_bot.cpython-310.pyc
 .idea/workspace.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
