--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ __pycache__/telegram_bot.cpython-310.pyc
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/inspectionProfiles/Project_Default.xml
 .idea/misc.xml
+bot.log
